--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 body {
-	vertical-align: center;
-	horizontal-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
