--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     scrollbar-width: none;
     font-weight: 500;
     width: 75%;
-    max-width: 600px
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
