more spacing things!

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.@font-face {
+@font-face {
     font-family: "Open Runde";
     src: url("https://cdn.jsdelivr.net/gh/lauridskern/open-runde@main/src/web/OpenRunde-Medium.woff2") format("woff2");
     font-weight: 500;
@@ -11,13 +11,13 @@
 }
 body {
     font-family: 'Open Runde', sans-serif;
-    margin: 0;
+    margin: 0 auto;
     padding: 18px;
     color: var(--grey);
     font-size: 18px;
     scrollbar-width: none;
     font-weight: 500;
-    width: 75%;
+    width: 80%;
     max-width: 600px;
     display: flex;
     flex-direction: column;
